# crab8

./: .gitignore  Cargo.toml  Makefile  README.md
src/: crab8.rs  main.rs
src/crab8/: display.rs
