[package]
name = "crab8"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: Remove bevy and find something lighter weight. Using this for now because it seems the easiest to get off the ground
bevy = "0.15.3"
rand = { version = "0.9.0", features = ["small_rng"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
