[package]
name = "crab8"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
env_logger = "0.11.7"
log = "0.4.27"
rand = { version = "0.9.0", features = ["small_rng"] }

# TODO: Consider if below optimizations are needed
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
